--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,6 +29,16 @@ body {
   padding-inline: 2rem;
 }
 
+#tooltip {
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  padding: 5px 10px;
+  font-size: 14px;
+  border-radius: 4px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  display: none;
+}
+
 .header > img {
   display: block;
   margin: auto;
