--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -289,18 +289,23 @@ h2 a {
   }
 }
 
-.react-quiz-container .quiz-result-filter {
-  .filter-dropdown-select  {
-      margin: 0 !important;
-      height: auto !important;
-      bottom: 0 !important;
+.react-quiz-container
+  {
+    max-width: none !important;
 
-      .selected-option{
-        bottom: 0 !important;
+    .quiz-result-filter {
+      .filter-dropdown-select  {
+          margin: 0 !important;
+          height: auto !important;
+          bottom: 0 !important;
+    
+          .selected-option{
+            bottom: 0 !important;
+          }
       }
+    
+      .filter-dropdown-select:after{
+        top: 50% !important;
+      }
+    }
   }
-
-  .filter-dropdown-select:after{
-    top: 50% !important;
-  }
-}
