udpate style toolbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -210,6 +210,10 @@ h2 a {
 
 .display-toolbar{
   display: block !important;
+  position: sticky;
+  top: 0px;
+  z-index: 100;
+  background-color: whitesmoke;
 }
 
 .display-none-toolbar{
